--- a/test.html
+++ b/test.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-
-<html>
-	<head>
-		<title>Git Test</title>
-	</head>
-	<body>
-		<h1>Welcome to Git!</h1>
-	</body>
-</html>
+body{
+	background-color: #ffffff;
+	color:#000000;
+}
