--- a/test.html
+++ b/test.html
@@ -1,4 +1,11 @@
-body{
-	background-color: #ffffff;
-	color:#000000;
-}
+<!DOCTYPE html>
+
+<html>
+<head>
+<title>Git Test</title>
+</head>
+<body>
+<h1>Welcome to Professionalism</h1>
+<img src="download.jpg"></img>
+<body>
+</html>
